force-app/main/default/objects/Work_Authorization__c/Work_Authorization__c.object-meta.xml
<CustomObject>
    <label>Work Authorization</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Authorization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Authorizations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>