force-app/main/default/objects/Work_Authorization__c/fields/Andersen_Approved__c.field-meta.xml
<CustomField>
    <fullName>Andersen_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Andersen Approved</label>
    <type>Checkbox</type>
</CustomField>