force-app/main/default/objects/Work_Authorization__c/fields/Assignment_Locality__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Locality__c</fullName>
    <description>JIRA:AGMPB-642</description>
    <label>Assignment Locality</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Relocation_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Locality</valueSetName>
    </valueSet>
</CustomField>