force-app/main/default/objects/Work_Authorization__c/fields/Client_Amount__c.field-meta.xml
<CustomField>
    <fullName>Client_Amount__c</fullName>
    <description>JIRA:AGMPB-304</description>
    <label>Client Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>