force-app/main/default/objects/Work_Authorization__c/fields/Client_Authorization_Response__c.field-meta.xml
<CustomField>
    <fullName>Client_Authorization_Response__c</fullName>
    <description>JIRA:AGMPB-304</description>
    <label>Client Authorization Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Request for Clarification</fullName>
            </value>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Deny</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>