force-app/main/default/objects/Work_Authorization__c/fields/Client_Request_for_Clarification__c.field-meta.xml
<CustomField>
    <fullName>Client_Request_for_Clarification__c</fullName>
    <description>JIRA:AGMPB-304</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Request for Clarification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>