force-app/main/default/objects/Work_Authorization__c/fields/Departure_Locality__c.field-meta.xml
<CustomField>
    <fullName>Departure_Locality__c</fullName>
    <description>JIRA:AGMPB-642</description>
    <label>Departure Locality</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Originating_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Locality</valueSetName>
    </valueSet>
</CustomField>