force-app/main/default/objects/Work_Authorization__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Work Authorizations</relationshipLabel>
    <relationshipName>Work_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>