force-app/main/default/objects/Work_Authorization__c/fields/Engagement_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mobile Employee</label>
    <referenceTo>Engagement_Assignee__c</referenceTo>
    <relationshipLabel>Work Authorizations</relationshipLabel>
    <relationshipName>Work_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>