force-app/main/default/objects/Work_Authorization__c/fields/Engagement_Name__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Name__c</fullName>
    <description>JIRA:AGMPB-428</description>
    <formula>Engagement__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Name</label>
    <type>Text</type>
</CustomField>