force-app/main/default/objects/Work_Authorization__c/fields/Originating_Country__c.field-meta.xml
<CustomField>
    <fullName>Originating_Country__c</fullName>
    <label>Departure Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>