force-app/main/default/objects/Work_Authorization__c/fields/Originating_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Originating_Country_Name__c</fullName>
    <description>JIRA:AGMPB-571</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure Country Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>