force-app/main/default/objects/Work_Authorization__c/fields/Other_service__c.field-meta.xml
<CustomField>
    <fullName>Other_service__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other service</label>
    <length>80</length>
    <type>Text</type>
</CustomField>