force-app/main/default/objects/Work_Authorization__c/fields/Request_Description__c.field-meta.xml
<CustomField>
    <fullName>Request_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>