force-app/main/default/objects/Work_Authorization__c/fields/Response_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Response_to_Client__c</fullName>
    <description>JIRA:AGMPB-304</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Response to Client</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>