force-app/main/default/objects/Work_Authorization__c/fields/SelectedCheckbox__c.field-meta.xml
<CustomField>
    <fullName>SelectedCheckbox__c</fullName>
    <description>AGMPB-673</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SelectedCheckbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>