force-app/main/default/objects/Work_Authorization__c/fields/Service_Requested__c.field-meta.xml
<CustomField>
    <fullName>Service_Requested__c</fullName>
    <label>Service Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax Return</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Certificate of Coverage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>