force-app/main/default/objects/Work_Authorization__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Andersen Review</fullName>
            </value>
            <value>
                <fullName>Declined by Andersen</fullName>
            </value>
            <value>
                <fullName>Declined by Client</fullName>
            </value>
            <value>
                <fullName>Approved by Client</fullName>
            </value>
            <value>
                <fullName>Clarifying Question</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>