force-app/main/default/objects/Work_Authorization__c/fields/Work_Authorization_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization_Name_Formula__c</fullName>
    <formula>Engagement_Assignee__r.First_Name__c +&quot; &quot;+ Engagement_Assignee__r.Last_Name__c +&quot; (&quot;+ TEXT(Service_Requested__c)+&quot;)&quot;</formula>
    <label>Work Authorization Name Formula</label>
    <type>Text</type>
</CustomField>