force-app/main/default/objects/Work_Authorization__c/fields/Work_Record__c.field-meta.xml
<CustomField>
    <fullName>Work_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Record</label>
    <referenceTo>Work_Record__c</referenceTo>
    <relationshipLabel>Work Authorizations</relationshipLabel>
    <relationshipName>Work_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>