force-app/main/default/objects/Work_Authorization__c/recordTypes/In_Scope.recordType-meta.xml
<RecordType>
    <fullName>In_Scope</fullName>
    <active>true</active>
    <label>In Scope</label>
</RecordType>