force-app/main/default/objects/Work_Authorization__c/recordTypes/Out_of_Scope.recordType-meta.xml
<RecordType>
    <fullName>Out_of_Scope</fullName>
    <active>true</active>
    <label>Out of Scope</label>
</RecordType>