force-app/main/default/objects/Work_Authorization__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client_Authorization_Response__c</columns>
    <columns>Client_Request_for_Clarification__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Response_to_Client__c</columns>
    <columns>Service_Requested__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>